ChronicleMap test was added